<resources>
    <string name="app_name">Driver</string>
    <string name="main_bottom_nav_insert_trip">ثبت سفر</string>
    <string name="main_bottom_nav_registered_trips">سفرهای ثبت شده</string>
    <string name="main_bottom_nav_path">مسیر حرکت</string>
    <string name="main_bottom_passengers_list">لیست مسافران</string>
    <string name="et_origin">مبدا را وارد کنید :</string>
    <string name="et_destination">مقصد را وارد کنید :</string>
    <string name="et_date">تاریخ حرکت را وارد کنید :</string>
    <string name="et_time">ساعت حرکت را وارد کنید :</string>
    <string name="et_stopping">نقاط توقف در طول مسیر را وارد کنید :</string>
    <string name="chair_spinner">تعداد صندلی خالی را وارد کنید :</string>
    <string name="shipment_checkbox">توانایی حمل بار</string>
    <string name="tv_distance_text">مسافت</string>
    <string name="tv_distance">............. کیلومتر</string>
    <string name="tv_price_text">قیمت</string>
    <string name="tv_price">.......... تومان</string>
    <string name="tv_weather_text">وضعیت هوا</string>
    <string name="tv_weather">.....................</string>
    <string name="btn_insert_trip">ثبت سفر</string>
    <string name="tv_origin_registered">مبدا</string>
    <string name="tv_to_registered">به</string>
    <string name="tv_destination_registered">مقصد</string>
    <string name="tv_date_time_movement_registered">زمان حرکت </string>
    <string name="tv_date_movement_registered">تاریخ حرکت</string>
    <string name="tv_time_movement_registered">ساعت حرکت</string>
    <string name="tv_trip_number_registered">شماره سفر </string>
    <string name="tv_trip_id_registered">...........</string>
    <string name="passengers_name">نام مسافر</string>
    <string name="passengers_family">نام خانوادگی</string>
    <string name="passengers_sexuality">جنسیت</string>
    <string name="passengers_phone_number">شماره موبایل</string>
    <string name="passengers_mobile">موبایل</string>
    <string name="driver_name">محمد مسعود کامرانی گهرمان</string>
    <string name="open">open drawer</string>
    <string name="close">close drawer</string>
    <string name="calculator_title">حسابداری</string>
    <string name="transaction_of_salary_title">تراکنش حقوق ها</string>
    <string name="transaction_of_trip_title">تراکنش سفرها</string>
    <string name="trips_title">سفرها</string>
    <string name="tv_rial">ریال</string>
    <string name="amount_of_money">10,000,000 ریال</string>
    <string name="tv_dept">بدهکاری </string>
    <string name="tv_creditor">طلبکاری </string>
    <string name="tv_inventory">موجودی</string>
    <string name="tv_get_salary">دریافت حقوق</string>
    <string name="btn_transaction_of_trip">تراکنش سفرها</string>
    <string name="btn_date_get_salary">تراکنش حقوق ها</string>
    <string name="tv_date_time_doing_transaction">زمان انجام</string>
    <string name="tv_received_money_transaction">مبلغ دریافتی</string>
    <string name="tv_amount_of_received_salary">مقدار حقوق دریافتی </string>
    <string name="tv_date_of_get_salary">تاریخ دریافت حقوق</string>
    <string name="tv_date_salary">1398/04/28</string>
    <string name="tv_number_of_passenger">تعداد مسافر</string>
    <string name="tv_count_passenger">4</string>
    <string name="tv_passenger">مسافر</string>
    <string name="comments_title">امتیازات و نظرات</string>
    <string name="tv_cancel">لغو سفر !!!</string>
    <string name="tv_cancel_question">آیا مطمعن به لغو سفر هستید ؟</string>
    <string name="btn_positive_cancel_trip">بله, لغو کن</string>
    <string name="btn_negative_cancel_trip">لغو نکن</string>
    <string name="search_location_activity_title">مکان مورد نظر خود را جستجو کنید </string>
    <string name="et_search_location">شهر, روستا, رستوران,...</string>
    <string name="direction">مسیریابی</string>
    <string name="btn_send_to_insert_trip">ثبت مسیر</string>
    <string name="settings">تنظیمات</string>
    <string name="about_me">درباره ما</string>
    <string name="exit">خروج</string>
    <string name="login">ورود</string>
    <string name="user_name">نام کاربری</string>
    <string name="password">کلمه عبور</string>
    <string name="tv_chair">تعداد صندلی رزرو شده</string>
</resources>
