<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    app:contentPadding="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_origin_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_origin_registered"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_date_time_doing_transaction"
            app:layout_constraintEnd_toStartOf="@+id/tv_to_transaction"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_to_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_to_registered"
            android:textColor="@color/text_view_in_registered_trip_recycler"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_date_doing_transaction"
            app:layout_constraintEnd_toStartOf="@+id/tv_destination_transaction"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_origin_transaction"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_destination_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_destination_registered"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_to_transaction"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_time_doing_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_date_time_doing_transaction"
            android:textColor="@color/text_view_in_registered_trip_recycler"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_date_doing_transaction"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_origin_transaction" />

        <TextView
            android:id="@+id/tv_date_doing_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_date_movement_registered"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_date_time_doing_transaction"
            app:layout_constraintTop_toBottomOf="@+id/tv_to_transaction" />


        <TextView
            android:id="@+id/tv_trip_number_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_trip_number_registered"
            android:textColor="@color/text_view_in_registered_trip_recycler"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_trip_id_transaction"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_time_doing_transaction" />

        <TextView
            android:id="@+id/tv_trip_id_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_trip_id_registered"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_trip_number_transaction"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_doing_transaction" />

        <TextView
            android:id="@+id/tv_received_money_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_received_money_transaction"
            android:textColor="@color/text_view_in_registered_trip_recycler"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_amount_of_money_transaction"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trip_number_transaction" />

        <TextView
            android:id="@+id/tv_amount_of_money_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/amount_of_money"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_received_money_transaction"
            app:layout_constraintTop_toBottomOf="@+id/tv_trip_number_transaction" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>