<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    app:contentPadding="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_origin_registered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_origin_registered"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_date_time_movement_registered"
            app:layout_constraintEnd_toStartOf="@+id/tv_to_registered"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_to_registered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_to_registered"
            android:textColor="@color/text_view_in_registered_trip_recycler"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_date_movement_registered"
            app:layout_constraintEnd_toStartOf="@+id/tv_destination_registered"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_origin_registered"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_destination_registered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_destination_registered"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_date_movement_registered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_to_registered"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_date_time_movement_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/tv_date_time_movement_registered"
            android:textColor="@color/text_view_in_registered_trip_recycler"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_date_movement_registered"
            app:layout_constraintEnd_toStartOf="@+id/tv_date_movement_registered"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_date_movement_registered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/tv_date_movement_registered"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancel_trip_registered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_date_time_movement_registered"
            app:layout_constraintTop_toBottomOf="@+id/tv_to_registered" />


        <TextView
            android:id="@+id/tv_trip_number_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_trip_number_registered"
            android:textColor="@color/text_view_in_registered_trip_recycler"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_trip_id_registered"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_time_movement_registered"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_trip_id_registered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_trip_id_registered"
            android:gravity="start"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel_trip_registered"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_trip_number_registered"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_movement_registered"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btn_cancel_trip_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_trip_id_registered"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_movement_registered" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>