<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    app:contentPadding="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_amount_of_received_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_amount_of_received_salary"
            android:textColor="@color/text_view_in_calculator_activity"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/date_of_get_Salary"
            app:layout_constraintEnd_toStartOf="@+id/tv_money_salary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_money_salary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/amount_of_money"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/date_of_get_Salary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_amount_of_received_salary"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/date_of_get_Salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_date_of_get_salary"
            android:textColor="@color/text_view_in_calculator_activity"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_date_salary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount_of_received_salary" />

        <TextView
            android:id="@+id/tv_date_salary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_date_salary"
            android:gravity="start"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/date_of_get_Salary"
            app:layout_constraintTop_toBottomOf="@+id/tv_money_salary" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>